Added a configurable refresh rate

--- a/app/src/main/res/layout/fragment_section_about.xml
+++ b/app/src/main/res/layout/fragment_section_about.xml
@@ -5,8 +5,30 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               tools:context=".fragments.AboutFragment">
-<TextView
-    android:id="@+id/txtAbout"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Time between refreshes (seconds)"
+            android:gravity="left"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:gravity="right"
+            android:id="@+id/refresh_rate"/>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/txtAbout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Update settings"
+        android:id="@+id/update_settings"/>
 </LinearLayout>
